manifest/haproxy-mmt.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: haproxy-config
  namespace: testbed
data:
  haproxy.cfg: |
    global
        daemon
        maxconn 4096

    defaults
        mode http
        timeout connect 5s
        timeout client 30s
        timeout server 30s

    frontend http_frontend
        bind *:8080
        default_backend http_backend

    backend http_backend
        balance roundrobin
        server http1 http-server-svc.testbed.svc.cluster.local:80 check
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  namespace: testbed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "worker"

      containers:
      - name: haproxy
        image: haproxy:2.9
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /usr/local/etc/haproxy

      - name: mmt-probe
        image: ghcr.io/montimage/mmt-probe:v1.6.2
        imagePullPolicy: IfNotPresent
        # run probe during 10 seconds
        #command: ["timeout", "--signal=2", "10", "mmt-probe"]
        args:
        - "-ieth0" 
        - "-Xprobe-id=3"

      volumes:
      - name: config
        configMap:
          name: haproxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-svc
  namespace: testbed
spec:
  type: NodePort
  selector:
    app: haproxy
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30080
