manifest/http-baseline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  namespace: testbed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
          
      containers:
      - name: http-server
        image: nginx:alpine
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-svc
  namespace: testbed
spec:
  selector:
    app: http-server
  ports:
  - name: http
    port: 80
    targetPort: 80
