manifest/http-envoy-sidecar.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: testbed
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - name: listener_http
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 15000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: backend
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: local_http_server
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
      - name: local_http_server
        connect_timeout: 0.25s
        type: STATIC
        load_assignment:
          cluster_name: local_http_server
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  namespace: testbed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"

      containers:
      - name: http-server
        image: nginx:alpine

      - name: mmt-probe
        image: ghcr.io/montimage/mmt-probe:v1.6.2
        imagePullPolicy: IfNotPresent
        # run probe during 10 seconds
        #command: ["timeout", "--signal=2", "10", "mmt-probe"]
        args:
        - "-ieth0"
        - "-Xprobe-id=5"

      - name: envoy
        image: envoyproxy/envoy:v1.30-latest
        args:
        - "-c"
        - "/etc/envoy/envoy.yaml"
        
        ports:
        - containerPort: 15000
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-svc
  namespace: testbed
spec:
  selector:
    app: http-server
  ports:
  - name: http
    port: 80
    targetPort: 15000
