manifest/mmt-node-master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mmt-node-master
  namespace: testbed
spec:
  selector:
    matchLabels:
      app: mmt-node-master
  template:
    metadata:
      labels:
        app: mmt-node-master
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      hostNetwork: true
      containers:
      - name: mmt-probe
        image: ghcr.io/montimage/mmt-probe:v1.6.2
        imagePullPolicy: IfNotPresent
        # run probe during 10 seconds
        #command: ["timeout", "--signal=2", "10", "mmt-probe"]
        args:
        - "-iany"
        - "-Xstack-type=624" #Linux cooked capture
        - "-Xprobe-id=4"
        - "-Xinput.pcap-filter=not tcp port 22 and not ip6 and not dst host 255.255.255.255 and not net 224.0.0.0/4"
